# python-clean-architecture

./: .project  README.md  pyproject.toml  storage.db
src/infra/config/: __init__.py  db_config.py
src/infra/entities/: pets.py  users.py
src/infra/repo/: fake.py  user_repository.py  user_repository_test.py
