[tool.poetry]
name = "python-clean-architecture"
version = "0.1.0"
description = ""
authors = ["Bruno Fioreze"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
