[tool.poetry]
name = "python-clean-architecture"
version = "0.1.0"
description = ""
authors = ["Bruno Fioreze"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.13"
Faker = "^18.9.0"
pytest = "^7.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
